feat: add GetInTouch component for early access requests with form handling

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 /* setting environment backgroud style  */
 body{
     background-color: #faf6ed;
+    font-family: "Inter", sans-serif;
 }
 
 /* font  */
